--- a/Tetris_STM_code/Tetris_STM_code.ioc
+++ b/Tetris_STM_code/Tetris_STM_code.ioc
@@ -15,14 +15,19 @@ Mcu.Name=STM32L031K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PA14
+Mcu.Pin11=PA15
+Mcu.Pin12=PB3
+Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PA0-CK_IN
-Mcu.Pin3=PA2
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PA15
-Mcu.Pin7=PB3
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L031K6Tx
@@ -36,6 +41,11 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 PA0-CK_IN.Mode=HSE-External-Clock-Source-for-LittleNemo
 PA0-CK_IN.Signal=RCC_CK_IN
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=rightButton
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.Locked=true
+PA1.Signal=GPXTI1
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -56,6 +66,22 @@ PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=rotateButton
+PA3.Locked=true
+PA3.Signal=GPXTI3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=fallButton
+PA4.Locked=true
+PA4.Signal=GPXTI4
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=testLed
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=menuButton
+PA6.Locked=true
+PA6.Signal=GPXTI6
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LD3 [Green]
 PB3.Locked=true
@@ -132,6 +158,14 @@ RCC.USART1Freq_Value=2097000
 RCC.USART2Freq_Value=32000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
