--- a/Tetris_STM_code/Tetris_STM_code.ioc
+++ b/Tetris_STM_code/Tetris_STM_code.ioc
@@ -3,14 +3,18 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+I2C1.I2C_Speed_Mode=I2C_Fast_Plus
+I2C1.IPParameters=Timing,I2C_Speed_Mode
+I2C1.Timing=0x00100413
 KeepUserPlacement=false
 Mcu.CPN=STM32L031K6T6
 Mcu.Family=STM32L0
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32L031K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PC14-OSC32_IN
@@ -18,7 +22,9 @@ Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA14
 Mcu.Pin11=PA15
 Mcu.Pin12=PB3
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA0-CK_IN
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -27,7 +33,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L031K6Tx
@@ -86,6 +92,12 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LD3 [Green]
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
