--- a/Tetris_STM_code/Tetris_STM_code.ioc
+++ b/Tetris_STM_code/Tetris_STM_code.ioc
@@ -3,6 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast_Plus
 I2C1.IPParameters=Timing,I2C_Speed_Mode
 I2C1.Timing=0x00100413
@@ -13,18 +14,22 @@ Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM22
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32L031K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PA15
-Mcu.Pin12=PB3
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PA15
+Mcu.Pin13=PB3
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM22_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM22_VS_OPM
 Mcu.Pin2=PA0-CK_IN
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -32,23 +37,28 @@ Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
-Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.Pin9=PA7
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L031K6Tx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
+NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0-CK_IN.Mode=HSE-External-Clock-Source-for-LittleNemo
 PA0-CK_IN.Signal=RCC_CK_IN
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=rightButton
+PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPXTI1
@@ -72,22 +82,34 @@ PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA3.GPIO_Label=rotateButton
+PA3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPXTI3
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA4.GPIO_Label=fallButton
+PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=testLed
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=menuButton
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA6.GPIO_Label=leftButton
+PA6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPXTI6
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA7.GPIO_Label=menuButton
+PA7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.Signal=GPXTI7
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LD3 [Green]
 PB3.Locked=true
@@ -104,7 +126,7 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=90
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
@@ -135,7 +157,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM22_Init-TIM22-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -178,10 +200,19 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+TIM22.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM22.IPParameters=Prescaler,AutoReloadPreload
+TIM22.Prescaler=10
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM22_VS_ClockSourceINT.Mode=Internal
+VP_TIM22_VS_ClockSourceINT.Signal=TIM22_VS_ClockSourceINT
+VP_TIM22_VS_OPM.Mode=OPM_bit
+VP_TIM22_VS_OPM.Signal=TIM22_VS_OPM
 board=NUCLEO-L031K6
 boardIOC=true
 isbadioc=false
