--- a/Tetris_STM_code/Tetris_STM_code.ioc
+++ b/Tetris_STM_code/Tetris_STM_code.ioc
@@ -3,9 +3,9 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-I2C1.I2C_Speed_Mode=I2C_Fast_Plus
+I2C1.I2C_Speed_Mode=I2C_Standard
 I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x00100413
+I2C1.Timing=0x00707CBB
 KeepUserPlacement=false
 Mcu.CPN=STM32L031K6T6
 Mcu.Family=STM32L0
@@ -135,7 +135,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
